--- a/index.html
+++ b/index.html
@@ -1,63 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap"
+        rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
 
-<link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Snitap</title>
 
 
 
 </head>
+
 <body>
-    
 
 
-<header>
-    <a href="">
-        <img src="assets/icons/logo.svg" alt="">
-    </a>
 
-    <a href="">
-        <img src="assets/icons/shopping-bag.svg" alt="">
-        <span>1</span>
-    </a>
-</header>
+    <header>
+        <a href="">
+            <img src="assets/icons/logo.svg" alt="">
+        </a>
 
-<section class="hero">
-    <div>
-        <h1>
-            Snitap, sua vida mais
-            <div>
-                <span>
-                    radical
-                </span>
-                <span>
-                    divertida
-                </span>
-                <span>
-                    saudável
-                </span>
-                <span>
-                    radical
-                </span>
+        <a href="">
+            <img src="assets/icons/shopping-bag.svg" alt="">
+            <span>1</span>
+        </a>
+    </header>
+
+    <section class="hero">
+        <div>
+            <h1>
+                Snitap, sua vida mais
+                <div>
+                    <span>
+                        radical
+                    </span>
+                    <span>
+                        divertida
+                    </span>
+                    <span>
+                        saudável
+                    </span>
+                    <span>
+                        radical
+                    </span>
+                </div>
+            </h1>
+
+            <div class="buttons">
+
+                <a href="" class="button buy shadow">
+                    <img src="assets/icons/shopping-bag.svg" alt="">
+                    COMPRAR AGORA</a>
+
+                <a href="" class="button play">
+                    <span class="shadow">
+                        <img src="assets/icons/play.svg" alt="">
+                    </span>
+                    VEJA EM AÇÃO
+                </a>
             </div>
-        </h1>
-    </div>
-</section>
+
+
+
+        </div>
+    </section>
 
 
 </body>
+
 </html>
