--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-    <header>
+    <header class="top">
         <a href="">
             <img src="assets/icons/logo.svg" alt="">
         </a>
@@ -119,6 +119,53 @@
         </div>
     </section>
 
+    <section class="gallery">
+        <header>
+            <span>GALERIA DE FOTOS</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+
+        <div class="content">
+            <figure>
+                <img src="assets/img/image 01.png" alt="">
+                <figcaption>
+                    <img src="assets/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/img/image 02.png" alt="">
+                <figcaption>
+                    <img src="assets/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/img/image 03.png" alt="">
+                <figcaption>
+                    <img src="assets/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/img/image 04.png" alt="">
+                <figcaption>
+                    <img src="assets/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+
+
+
+
+
+
+        </div>
+    </section>
 </body>
 
 </html>
